Revert changes to make tests compatible with Java 8